[package]
name = "bevy_test"
version = "0.1.0"
authors = ["darksv <darek969-12@o2.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.5.0", features = ["jpeg"] }
rand = "0.8.3"
engine = { path = "../engine" }