[package]
name = "bevy_test"
version = "0.1.0"
authors = ["darksv <darek969-12@o2.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = [ "bevy_gilrs", "bevy_wgpu", "bevy_winit", "render", "png", "jpeg"], default-features = false }
engine = { path = "../engine" }
leg_archive = { path = "../leg_archive" }
bevy_kira_audio = { version = "0.4.0", features = ["ogg"], default-features = false }